tests/invalid/borrow_conflict/double_mut.facet
fn double_mut(mut x: unrestricted isize) -> unrestricted isize {
    let r1: affine &mut unrestricted isize = (&mut x) in
    let r2: affine &mut unrestricted isize = (&mut x) in
    (*r1)
}
